WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159767
Fix the !ENABLE(MATHML) build after
r201739
https://bugs.webkit.org/show_bug.cgi?id=159767
Summary
Fix the !ENABLE(MATHML) build after r201739
Csaba Osztrogonác
Reported
2016-07-14 08:29:56 PDT
https://trac.webkit.org/changeset/201739
broke the !ENABLE(MATHML) build: Source/WebCore/CMakeFiles/WebCore.dir/dom/Document.cpp.o -c ../../Source/WebCore/dom/Document.cpp In file included from ../../Source/WebCore/dom/EventListenerMap.h:40:0, from ../../Source/WebCore/dom/EventTarget.h:34, from ../../Source/WebCore/dom/Node.h:28, from ../../Source/WebCore/dom/ContainerNode.h:29, from ../../Source/WebCore/dom/Document.h:32, from ../../Source/WebCore/dom/Document.cpp:29: ../../Source/WTF/wtf/NeverDestroyed.h: In instantiation of 'WTF::NeverDestroyed<T>::NeverDestroyed(Args&& ...) [with Args = {WTF::ASCIILiteral}; T = const WTF::AtomicString]': ../../Source/WebCore/dom/Document.cpp:1144:100: required from here ../../Source/WTF/wtf/text/AtomicString.h:187:5: error: 'WTF::AtomicString::AtomicString(WTF::ASCIILiteral)' is private In file included from ../../Source/WebCore/css/CSSPrimitiveValue.h:32:0, from ../../Source/WebCore/dom/StyledElement.h:28, from ../../Source/WebCore/html/HTMLElement.h:26, from ../../Source/WebCore/html/HTMLFrameOwnerElement.h:24, from ../../Source/WebCore/rendering/RenderWidget.h:25, from ../../Source/WebCore/rendering/RenderEmbeddedObject.h:26, from ../../Source/WebCore/page/ChromeClient.h:39, from ../../Source/WebCore/dom/Document.cpp:42: ../../Source/WTF/wtf/NeverDestroyed.h:53:9: error: within this context ninja: build stopped: subcommand failed.
Attachments
Patch
(1.41 KB, patch)
2016-07-14 08:31 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-07-14 08:31:16 PDT
Created
attachment 283645
[details]
Patch
WebKit Commit Bot
Comment 2
2016-07-14 12:30:01 PDT
Comment on
attachment 283645
[details]
Patch Clearing flags on attachment: 283645 Committed
r203233
: <
http://trac.webkit.org/changeset/203233
>
WebKit Commit Bot
Comment 3
2016-07-14 12:30:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug