Fix the !ENABLE(MATHML) build after r201739 https://bugs.webkit.org/show_bug.cgi?id=159767

Reviewed by Alex Christensen.

* dom/Document.cpp:
(WebCore::Document::validateCustomElementName):


Canonical link: https://commits.webkit.org/177923@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203233 268f45cc-cd09-0410-ab3c-d52691b4dbfc